Managing dircount using parent_id field. Removing min/avg/max dircount in reports (computing this info is not scalable)

--- a/configure.ac
+++ b/configure.ac
@@ -4,8 +4,8 @@
 
 AC_PREREQ(2.59)
 
-AC_INIT( [robinhood], [2.3.2], [robinhood-support@lists.sourceforge.net])
-RELEASE="0.beta1"
+AC_INIT( [robinhood], [2.4.0], [robinhood-support@lists.sourceforge.net])
+RELEASE="0.alpha1"
 AC_DEFINE_UNQUOTED(RELEASE, "$RELEASE", [release info] )
 AC_SUBST(RELEASE)
 
