Added innodb support

--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -76,6 +76,7 @@ ListManager
         db     = "robinhood_db" ;
         user   = "robinhood" ;
         password_file = "/etc/robinhood.d/.dbpassword" ;
+        # innodb = enabled;
     }
 }
 
