--- a/doc/templates/backup_detailed.conf
+++ b/doc/templates/backup_detailed.conf
@@ -266,6 +266,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+        # innodb = enabled;
 	}
 }
 
