Added innodb support

--- a/doc/templates/hsmlite_detailed.conf
+++ b/doc/templates/hsmlite_detailed.conf
@@ -266,7 +266,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
-        innodb = enabled;
+        # innodb = enabled;
 	}
 #       user_acct = FALSE;
 #       group_acct = FALSE;
