added acct parameters to detailed templates

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -393,6 +393,8 @@ ListManager
 		password = "robinhood";
         # innodb = enabled;
 	}
+#       user_acct = FALSE;
+#       group_acct = FALSE;
 }
 
 db_update_policy
