--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -78,6 +78,9 @@ ListManager
         password_file = "/etc/robinhood.d/.dbpassword" ;
         # innodb = enabled;
     }
+
+#       user_acct = FALSE;
+#       group_acct = FALSE;
 }
 
 # Entry Processor configuration
