Added stress tests to dist tarball.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -60,5 +60,9 @@ EXTRA_DIST= lustre_fs/1-test_setup.sh	\
     posix_fs/cfg/test_updt.conf     \
     posix_fs/cfg/test_xattr.conf    \
     posix_fs/cleanup.sh             \
+    huge_posix/cfg/innodb.conf	    \
+    huge_posix/cfg/common.conf	    \
+    huge_posix/1-test_setup.sh      \
+    huge_posix/2-run-tests.sh	    \
 	test_compil_switches.sh	    \
 	fill_fs.sh
