Now performing tests with InnoDB engine

--- a/tests/huge_posix/cfg/common.conf
+++ b/tests/huge_posix/cfg/common.conf
@@ -36,6 +36,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+        innodb = enabled;
 	}
 
 	SQLite {
