--- a/tests/posix_fs/cfg/acct_group.conf
+++ b/tests/posix_fs/cfg/acct_group.conf
@@ -33,6 +33,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+        innodb = enabled;
 	}
 
 	SQLite {
