--- a/tests/posix_fs/cfg/log_common.conf
+++ b/tests/posix_fs/cfg/log_common.conf
@@ -16,6 +16,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+        innodb = enabled;
 	}
 
 	SQLite {
