--- a/src/robinhood/Makefile.am
+++ b/src/robinhood/Makefile.am
@@ -78,30 +78,56 @@ rbh_hsm_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_hsm_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 endif
 
-if HSM_LITE
-sbin_PROGRAMS=rbh-hsmlite rbh-hsmlite-report rbh-hsmlite-recov rbh-hsmlite-undo-rm
+if SHOOK
+sbin_PROGRAMS=rbh-shook rbh-shook-report rbh-shook-recov rbh-shook-undo-rm
 
 # dependencies:
-rbh_hsmlite_DEPENDENCIES=$(all_libs)
-rbh_hsmlite_report_DEPENDENCIES=$(all_libs)
-rbh_hsmlite_recov_DEPENDENCIES=$(all_libs)
+rbh_shook_DEPENDENCIES=$(all_libs)
+rbh_shook_report_DEPENDENCIES=$(all_libs)
+rbh_shook_recov_DEPENDENCIES=$(all_libs)
 
-rbh_hsmlite_SOURCES=robinhood_main.c
-rbh_hsmlite_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
-rbh_hsmlite_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+rbh_shook_SOURCES=robinhood_main.c
+rbh_shook_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_shook_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_hsmlite_report_SOURCES=robinhood_report.c
-rbh_hsmlite_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
-rbh_hsmlite_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+rbh_shook_report_SOURCES=robinhood_report.c
+rbh_shook_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_shook_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_hsmlite_recov_SOURCES=robinhood_recov.c
-rbh_hsmlite_recov_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
-rbh_hsmlite_recov_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+rbh_shook_recov_SOURCES=robinhood_recov.c
+rbh_shook_recov_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_shook_recov_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_hsmlite_undo_rm_SOURCES=robinhood_undo_rm.c
-rbh_hsmlite_undo_rm_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
-rbh_hsmlite_undo_rm_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+rbh_shook_undo_rm_SOURCES=robinhood_undo_rm.c
+rbh_shook_undo_rm_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_shook_undo_rm_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 endif
+
+if BACKUP
+sbin_PROGRAMS=rbh-backup rbh-backup-report rbh-backup-recov rbh-backup-undo-rm
+
+# dependencies:
+rbh_backup_DEPENDENCIES=$(all_libs)
+rbh_backup_report_DEPENDENCIES=$(all_libs)
+rbh_backup_recov_DEPENDENCIES=$(all_libs)
+
+rbh_backup_SOURCES=robinhood_main.c
+rbh_backup_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_backup_report_SOURCES=robinhood_report.c
+rbh_backup_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_backup_recov_SOURCES=robinhood_recov.c
+rbh_backup_recov_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_recov_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_backup_undo_rm_SOURCES=robinhood_undo_rm.c
+rbh_backup_undo_rm_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_undo_rm_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+endif
+
 
 
 if SHERPA
