policies: tree condition must match the root too

--- a/tests/lustre_fs/cfg/test_path.conf
+++ b/tests/lustre_fs/cfg/test_path.conf
@@ -36,7 +36,7 @@ Filesets
 
         FileClass relative_tree
         {
-                definition { tree == "dir6" }
+                definition { tree == "dir6" or tree == "file.6" }
         }
 
         FileClass any_root_tree
