new config parameter "scan_interval" that overrides min/max_scan_interval

--- a/tests/posix_fs/cfg/log_common.conf
+++ b/tests/posix_fs/cfg/log_common.conf
@@ -26,8 +26,7 @@ ListManager
 }
 
 FS_Scan {
-	min_scan_interval = 100;
-	max_scan_interval = 100;
+	scan_interval = 100;
 }
 
 # for tests with backup purpose
