--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@
 AC_PREREQ(2.59)
 
 AC_INIT( [robinhood], [2.3.3], [robinhood-support@lists.sourceforge.net])
-RELEASE="0.pre1"
+RELEASE="0.pre2.fix_cl"
 AC_DEFINE_UNQUOTED(RELEASE, "$RELEASE", [release info] )
 AC_SUBST(RELEASE)
 
@@ -56,6 +56,7 @@ AX_ENABLE_FLAG([debug-hash], [enables debug traces internal hash tables], [-D_DE
 
 # behavior flags
 AX_ENABLE_FLAG( [fid2path-leading-slash], [must be enabled if fid2path() returns a leading slash], [-D_FID2PATH_LEADING_SLASH] )
+AX_ENABLE_FLAG( [cl-rename-overwrite], [changelog correctly reflects overwriting rename], [-D_CL_RNM_OVER] )
 
 
 
