--- a/src/robinhood/Makefile.am
+++ b/src/robinhood/Makefile.am
@@ -47,7 +47,7 @@ all_libs += ../common/libcommontools.la
 
 if TMP_FS_MGR
 
-sbin_PROGRAMS=robinhood rbh-report rbh-du
+sbin_PROGRAMS=robinhood rbh-report rbh-du rbh-find
 
 # dependencies:
 robinhood_DEPENDENCIES=$(all_libs)
@@ -62,9 +62,13 @@ rbh_report_SOURCES=robinhood_report.c
 rbh_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_du_SOURCES=rbh_du.c
+rbh_du_SOURCES=rbh_du.c cmd_helpers.h cmd_helpers.c
 rbh_du_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_du_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_find_SOURCES=rbh_find.c cmd_helpers.h cmd_helpers.c
+rbh_find_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_find_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 endif
 
 if LUSTRE_HSM
