--- a/src/robinhood/Makefile.am
+++ b/src/robinhood/Makefile.am
@@ -47,12 +47,14 @@ all_libs += ../common/libcommontools.la
 
 if TMP_FS_MGR
 
-sbin_PROGRAMS=robinhood rbh-report rbh-du rbh-find
+sbin_PROGRAMS=robinhood rbh-report
+bin_PROGRAMS=rbh-du rbh-find
 
 # dependencies:
 robinhood_DEPENDENCIES=$(all_libs)
 rbh_report_DEPENDENCIES=$(all_libs)
 rbh_du_DEPENDENCIES=$(all_libs)
+rbh_find_DEPENDENCIES=$(all_libs)
 
 robinhood_SOURCES=robinhood_main.c
 robinhood_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
@@ -73,33 +75,48 @@ endif
 
 if LUSTRE_HSM
 sbin_PROGRAMS=rbh-hsm rbh-hsm-report
+bin_PROGRAMS=rbh-hsm-du rbh-hsm-find
 
 # dependencies:
 rbh_hsm_DEPENDENCIES=$(all_libs)
 rbh_hsm_report_DEPENDENCIES=$(all_libs)
+rbh_hsm_du_DEPENDENCIES=$(all_libs)
+rbh_hsm_find_DEPENDENCIES=$(all_libs)
 
 rbh_hsm_SOURCES=robinhood_main.c
 rbh_hsm_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_hsm_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_hsm_report_SOURCES=robinhood_report.c
+rbh_hsm_report_SOURCES=robinhood_report.c cmd_helpers.c
 rbh_hsm_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_hsm_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_hsm_du_SOURCES=rbh_du.c cmd_helpers.h cmd_helpers.c
+rbh_hsm_du_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_hsm_du_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_hsm_find_SOURCES=rbh_find.c cmd_helpers.h cmd_helpers.c
+rbh_hsm_find_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_hsm_find_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
 endif
 
 if SHOOK
 sbin_PROGRAMS=rbh-shook rbh-shook-report rbh-shook-recov rbh-shook-undo-rm
+bin_PROGRAMS=rbh-shook-du rbh-shook-find
 
 # dependencies:
 rbh_shook_DEPENDENCIES=$(all_libs)
 rbh_shook_report_DEPENDENCIES=$(all_libs)
 rbh_shook_recov_DEPENDENCIES=$(all_libs)
+rbh_shook_du_DEPENDENCIES=$(all_libs)
+rbh_shook_find_DEPENDENCIES=$(all_libs)
 
 rbh_shook_SOURCES=robinhood_main.c
 rbh_shook_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_shook_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_shook_report_SOURCES=robinhood_report.c
+rbh_shook_report_SOURCES=robinhood_report.c cmd_helpers.c
 rbh_shook_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_shook_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
@@ -110,21 +127,32 @@ rbh_shook_recov_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOS
 rbh_shook_undo_rm_SOURCES=robinhood_undo_rm.c
 rbh_shook_undo_rm_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_shook_undo_rm_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_shook_du_SOURCES=rbh_du.c cmd_helpers.h cmd_helpers.c
+rbh_shook_du_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_shook_du_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_shook_find_SOURCES=rbh_find.c cmd_helpers.h cmd_helpers.c
+rbh_shook_find_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_shook_find_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 endif
 
 if BACKUP
 sbin_PROGRAMS=rbh-backup rbh-backup-report rbh-backup-recov rbh-backup-undo-rm
+bin_PROGRAMS=rbh-backup-du rbh-backup-find
 
 # dependencies:
 rbh_backup_DEPENDENCIES=$(all_libs)
 rbh_backup_report_DEPENDENCIES=$(all_libs)
 rbh_backup_recov_DEPENDENCIES=$(all_libs)
+rbh_backup_du_DEPENDENCIES=$(all_libs)
+rbh_backup_find_DEPENDENCIES=$(all_libs)
 
 rbh_backup_SOURCES=robinhood_main.c
 rbh_backup_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_backup_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_backup_report_SOURCES=robinhood_report.c
+rbh_backup_report_SOURCES=robinhood_report.c cmd_helpers.c
 rbh_backup_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_backup_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
@@ -135,24 +163,43 @@ rbh_backup_recov_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPO
 rbh_backup_undo_rm_SOURCES=robinhood_undo_rm.c
 rbh_backup_undo_rm_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_backup_undo_rm_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_backup_du_SOURCES=rbh_du.c cmd_helpers.h cmd_helpers.c
+rbh_backup_du_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_du_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_backup_find_SOURCES=rbh_find.c cmd_helpers.h cmd_helpers.c
+rbh_backup_find_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_find_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 endif
 
 
 
 if SHERPA
 sbin_PROGRAMS=rbh-sherpa rbh-sherpa-report
+bin_PROGRAMS=rbh-sherpa-du rbh-sherpa-find
 
 # dependencies:
 rbh_sherpa_DEPENDENCIES=$(all_libs)
 rbh_sherpa_report_DEPENDENCIES=$(all_libs)
+rbh_sherpa_du_DEPENDENCIES=$(all_libs)
+rbh_sherpa_find_DEPENDENCIES=$(all_libs)
 
 rbh_sherpa_SOURCES=robinhood_main.c
 rbh_sherpa_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_sherpa_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_sherpa_report_SOURCES=robinhood_report.c
+rbh_sherpa_report_SOURCES=robinhood_report.c cmd_helpers.c
 rbh_sherpa_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_sherpa_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_sherpa_du_SOURCES=rbh_du.c cmd_helpers.h cmd_helpers.c
+rbh_sherpa_du_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_sherpa_du_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_sherpa_find_SOURCES=rbh_find.c cmd_helpers.h cmd_helpers.c
+rbh_sherpa_find_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_sherpa_find_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
 endif
 
