purge_parameters: added parameter "check_purge_status_on_startup" (to be implemented)

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -317,6 +317,9 @@ Purge_Parameters
     # Thus, it is necessary to wait a moment after a purge
     # before performing other 'df' or 'ost df' commands.
     post_purge_df_latency = 1min;
+
+    ## check status of previous purge operations on startup
+    ## check_purge_status_on_startup = TRUE;
 }
 
 
